project('steam-client-helper', ['c', 'cpp'], version : '4.11', meson_version : '>= 0.49')

sdk_ver = '146'

src_path = meson.source_root() / 'lsteamclient'

defs = [
  '-DSTEAM_API_EXPORTS',
  '-Dprivate=public',
  '-Dprotected=public',
]

add_project_arguments(defs, language : ['c','cpp'])


src = files([
  src_path / 'steamclient_main.c',
  src_path / 'steamclient_wrappers.c',
  src_path / 'steamclient_manual_144.cpp',
  src_path / 'steamclient_manual_145.cpp',

  src_path / 'winISteamAppList.c',
  src_path / 'winISteamApps.c',
  src_path / 'winISteamAppTicket.c',
  src_path / 'winISteamClient.c',
  src_path / 'winISteamController.c',
  src_path / 'winISteamFriends.c',
  src_path / 'winISteamGameCoordinator.c',
  src_path / 'winISteamGameSearch.c',
  src_path / 'winISteamGameServer.c',
  src_path / 'winISteamGameServerStats.c',
  src_path / 'winISteamGameStats.c',
  src_path / 'winISteamHTMLSurface.c',
  src_path / 'winISteamHTTP.c',
  src_path / 'winISteamInput.c',
  src_path / 'winISteamInventory.c',
  src_path / 'winISteamMasterServerUpdater.c',
  src_path / 'winISteamMatchmaking.c',
  src_path / 'winISteamMatchmakingServers.c',
  src_path / 'winISteamMusic.c',
  src_path / 'winISteamMusicRemote.c',
  src_path / 'winISteamNetworking.c',
  src_path / 'winISteamNetworkingSockets.c',
  src_path / 'winISteamNetworkingSocketsSerialized.c',
  src_path / 'winISteamNetworkingUtils.c',
  src_path / 'winISteamParentalSettings.c',
  src_path / 'winISteamParties.c',
  src_path / 'winISteamRemotePlay.c',
  src_path / 'winISteamRemoteStorage.c',
  src_path / 'winISteamScreenshots.c',
  src_path / 'winISteamUGC.c',
  src_path / 'winISteamUnifiedMessages.c',
  src_path / 'winISteamUser.c',
  src_path / 'winISteamUserStats.c',
  src_path / 'winISteamUtils.c',
  src_path / 'winISteamVideo.c',

  src_path / 'cppISteamAppList_STEAMAPPLIST_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION002.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION003.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION004.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION005.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION006.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION007.cpp',
  src_path / 'cppISteamApps_STEAMAPPS_INTERFACE_VERSION008.cpp',
  src_path / 'cppISteamAppTicket_STEAMAPPTICKET_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamClient_SteamClient006.cpp',
  src_path / 'cppISteamClient_SteamClient007.cpp',
  src_path / 'cppISteamClient_SteamClient008.cpp',
  src_path / 'cppISteamClient_SteamClient009.cpp',
  src_path / 'cppISteamClient_SteamClient010.cpp',
  src_path / 'cppISteamClient_SteamClient011.cpp',
  src_path / 'cppISteamClient_SteamClient012.cpp',
  src_path / 'cppISteamClient_SteamClient013.cpp',
  src_path / 'cppISteamClient_SteamClient014.cpp',
  src_path / 'cppISteamClient_SteamClient015.cpp',
  src_path / 'cppISteamClient_SteamClient016.cpp',
  src_path / 'cppISteamClient_SteamClient017.cpp',
  src_path / 'cppISteamClient_SteamClient018.cpp',
  src_path / 'cppISteamClient_SteamClient019.cpp',
  src_path / 'cppISteamController_SteamController003.cpp',
  src_path / 'cppISteamController_SteamController004.cpp',
  src_path / 'cppISteamController_SteamController005.cpp',
  src_path / 'cppISteamController_SteamController006.cpp',
  src_path / 'cppISteamController_SteamController007.cpp',
  src_path / 'cppISteamController_STEAMCONTROLLER_INTERFACE_VERSION.cpp',
  src_path / 'cppISteamFriends_SteamFriends001.cpp',
  src_path / 'cppISteamFriends_SteamFriends002.cpp',
  src_path / 'cppISteamFriends_SteamFriends003.cpp',
  src_path / 'cppISteamFriends_SteamFriends004.cpp',
  src_path / 'cppISteamFriends_SteamFriends005.cpp',
  src_path / 'cppISteamFriends_SteamFriends006.cpp',
  src_path / 'cppISteamFriends_SteamFriends007.cpp',
  src_path / 'cppISteamFriends_SteamFriends008.cpp',
  src_path / 'cppISteamFriends_SteamFriends009.cpp',
  src_path / 'cppISteamFriends_SteamFriends010.cpp',
  src_path / 'cppISteamFriends_SteamFriends011.cpp',
  src_path / 'cppISteamFriends_SteamFriends012.cpp',
  src_path / 'cppISteamFriends_SteamFriends013.cpp',
  src_path / 'cppISteamFriends_SteamFriends014.cpp',
  src_path / 'cppISteamFriends_SteamFriends015.cpp',
  src_path / 'cppISteamFriends_SteamFriends017.cpp',
  src_path / 'cppISteamGameCoordinator_SteamGameCoordinator001.cpp',
  src_path / 'cppISteamGameSearch_SteamMatchGameSearch001.cpp',
  src_path / 'cppISteamGameServerStats_SteamGameServerStats001.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer002.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer003.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer004.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer005.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer008.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer009.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer010.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer011.cpp',
  src_path / 'cppISteamGameServer_SteamGameServer012.cpp',
  src_path / 'cppISteamGameStats_SteamGameStats001.cpp',
  src_path / 'cppISteamHTMLSurface_STEAMHTMLSURFACE_INTERFACE_VERSION_001.cpp',
  src_path / 'cppISteamHTMLSurface_STEAMHTMLSURFACE_INTERFACE_VERSION_002.cpp',
  src_path / 'cppISteamHTMLSurface_STEAMHTMLSURFACE_INTERFACE_VERSION_003.cpp',
  src_path / 'cppISteamHTMLSurface_STEAMHTMLSURFACE_INTERFACE_VERSION_004.cpp',
  src_path / 'cppISteamHTMLSurface_STEAMHTMLSURFACE_INTERFACE_VERSION_005.cpp',
  src_path / 'cppISteamHTTP_STEAMHTTP_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamHTTP_STEAMHTTP_INTERFACE_VERSION002.cpp',
  src_path / 'cppISteamHTTP_STEAMHTTP_INTERFACE_VERSION003.cpp',
  src_path / 'cppISteamInput_SteamInput001.cpp',
  src_path / 'cppISteamInventory_STEAMINVENTORY_INTERFACE_V001.cpp',
  src_path / 'cppISteamInventory_STEAMINVENTORY_INTERFACE_V002.cpp',
  src_path / 'cppISteamInventory_STEAMINVENTORY_INTERFACE_V003.cpp',
  src_path / 'cppISteamMasterServerUpdater_SteamMasterServerUpdater001.cpp',
  src_path / 'cppISteamMatchmakingServers_SteamMatchMakingServers001.cpp',
  src_path / 'cppISteamMatchmakingServers_SteamMatchMakingServers002.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking001.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking002.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking003.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking004.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking005.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking006.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking007.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking008.cpp',
  src_path / 'cppISteamMatchmaking_SteamMatchMaking009.cpp',
  src_path / 'cppISteamMusicRemote_STEAMMUSICREMOTE_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamMusic_STEAMMUSIC_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamNetworkingSocketsSerialized_SteamNetworkingSocketsSerialized002.cpp',
  src_path / 'cppISteamNetworkingSocketsSerialized_SteamNetworkingSocketsSerialized003.cpp',
  src_path / 'cppISteamNetworkingSockets_SteamNetworkingSockets002.cpp',
  src_path / 'cppISteamNetworkingSockets_SteamNetworkingSockets003.cpp',
  src_path / 'cppISteamNetworking_SteamNetworking001.cpp',
  src_path / 'cppISteamNetworking_SteamNetworking002.cpp',
  src_path / 'cppISteamNetworking_SteamNetworking003.cpp',
  src_path / 'cppISteamNetworking_SteamNetworking004.cpp',
  src_path / 'cppISteamNetworking_SteamNetworking005.cpp',
  src_path / 'cppISteamNetworkingUtils_SteamNetworkingUtils001.cpp',
  src_path / 'cppISteamNetworkingUtils_SteamNetworkingUtils002.cpp',
  src_path / 'cppISteamParentalSettings_STEAMPARENTALSETTINGS_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamParties_SteamParties002.cpp',
  src_path / 'cppISteamRemotePlay_STEAMREMOTEPLAY_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION002.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION003.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION004.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION005.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION006.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION007.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION008.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION009.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION010.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION011.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION012.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION013.cpp',
  src_path / 'cppISteamRemoteStorage_STEAMREMOTESTORAGE_INTERFACE_VERSION014.cpp',
  src_path / 'cppISteamScreenshots_STEAMSCREENSHOTS_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamScreenshots_STEAMSCREENSHOTS_INTERFACE_VERSION002.cpp',
  src_path / 'cppISteamScreenshots_STEAMSCREENSHOTS_INTERFACE_VERSION003.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION002.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION003.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION004.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION005.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION006.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION007.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION008.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION009.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION010.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION012.cpp',
  src_path / 'cppISteamUGC_STEAMUGC_INTERFACE_VERSION013.cpp',
  src_path / 'cppISteamUnifiedMessages_STEAMUNIFIEDMESSAGES_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION001.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION002.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION003.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION004.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION005.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION006.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION007.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION008.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION009.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION010.cpp',
  src_path / 'cppISteamUserStats_STEAMUSERSTATS_INTERFACE_VERSION011.cpp',
  src_path / 'cppISteamUser_SteamUser004.cpp',
  src_path / 'cppISteamUser_SteamUser005.cpp',
  src_path / 'cppISteamUser_SteamUser006.cpp',
  src_path / 'cppISteamUser_SteamUser007.cpp',
  src_path / 'cppISteamUser_SteamUser008.cpp',
  src_path / 'cppISteamUser_SteamUser009.cpp',
  src_path / 'cppISteamUser_SteamUser010.cpp',
  src_path / 'cppISteamUser_SteamUser011.cpp',
  src_path / 'cppISteamUser_SteamUser012.cpp',
  src_path / 'cppISteamUser_SteamUser013.cpp',
  src_path / 'cppISteamUser_SteamUser014.cpp',
  src_path / 'cppISteamUser_SteamUser015.cpp',
  src_path / 'cppISteamUser_SteamUser016.cpp',
  src_path / 'cppISteamUser_SteamUser017.cpp',
  src_path / 'cppISteamUser_SteamUser018.cpp',
  src_path / 'cppISteamUser_SteamUser019.cpp',
  src_path / 'cppISteamUser_SteamUser020.cpp',
  src_path / 'cppISteamUtils_SteamUtils002.cpp',
  src_path / 'cppISteamUtils_SteamUtils004.cpp',
  src_path / 'cppISteamUtils_SteamUtils005.cpp',
  src_path / 'cppISteamUtils_SteamUtils006.cpp',
  src_path / 'cppISteamUtils_SteamUtils007.cpp',
  src_path / 'cppISteamUtils_SteamUtils008.cpp',
  src_path / 'cppISteamUtils_SteamUtils009.cpp',
  src_path / 'cppISteamVideo_STEAMVIDEO_INTERFACE_V001.cpp',
  src_path / 'cppISteamVideo_STEAMVIDEO_INTERFACE_V002.cpp',
])

sdk_list = [112, 113, 114, 115, 116, 117, 118, 119,
  120, 121, 122, 123, 124, 125, 126, 127, 128, 129,
  130, 131, 132, 133, 134, 135, 136, 137, 138, 139,
  140, 141, 142, 143, 144, 145, 146,]

foreach sdk : sdk_list
  src += src_path / 'struct_converters_@0@.cpp'.format(sdk)
endforeach

sdk_list_ext = [
  '111x', '112x', '116x', '119x',
  '121x', '123a', '126a', '128x', '129a',
  '130x', '132x', '133a', '133b', '133x', '135a', '138a',
  '143x', '143y']

foreach sdk : sdk_list_ext
  src += src_path / 'struct_converters_@0@.cpp'.format(sdk)
endforeach

shared_library('lsteamclient.dll', src,
  name_prefix : '',
  objects     : src_path / 'lsteamclient.spec',
  install     : true)
